2002-01-29  Per Bothner  <per@bothner.com>

	* NamespaceResolver.java (beginGroup):  Call closeStartTag.

	* XMLPrinter.java (escapeText):  Make public.
	(<init>):  New constructors.

2002-01-23  Per Bothner  <per@bothner.com>

	* XMLPrinter.java:  Re-write to inherit from PrintConsumer.

2002-01-21  Per Bothner  <per@bothner.com>

	* ParsedXMLToConsumer.java (parse):  Use NamespaceResolver.
	Add calls to out.beginDocument/endDocument.

	* XMLPrinter.java (writeObject):  Check for UnescapedData.

2002-01-13  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (style):  New field.
	(make): Static method - takes a style parameter.

2002-01-07  Per Bothner  <per@bothner.com>

	* NamedChildrenFilter.java:  New class, extends FilterConsumer.
	* Makefile.am (java_sources):  Add NamedChildrenFilter.java.

	* NamespaceResolver.java (endAttributes):  Fix range bug.

	* XMLPrinter.java (beginDocument, endDocument):  New methods.

2002-01-02  Per Bothner  <per@bothner.com>

	* XMLParser.java.in:  No longer read entire file into buffer.
	This allows handling very large input files, but required lots of
	changes here and there.
	* ParsedXMLHandler.java.in (emitComment):  Update API comment.

2001-12-24  Per Bothner  <per@bothner.com>

	* XMLParser.java.in (parse):  Fix comment reading to handle --->.

	* XMLPrinter.java (htmlCompat):  New field.
	(endGroup):  If htmlCompat, don't call closeTag.

	* XMLPrinter.java (writeObject):  Handle null.
	Don't startWord if value is String or CharSeq.

	* NamespaceResolver.java (endGroup, writeChar, writeBoolean,
	writeFloat):  Add missing calls to closeStartTag.

2001-11-24  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (writeObject):  Handle null argument.

2001-11-16  Jim White  <jim@pagesmiths.com>

	* QName.java.in:  Fix syntax errors in WITHOUT REFERENCES case.

2001-11-12  Per Bothner  <per@bothner.com>

	* QName.java.in (make):  LocalName can be null (for XQuery '*').
